<resources>
    <string name="app_name">Pizzeria Kotlin</string>
    <string name="entrar">Entrar</string>
    <string name="creaccionPedido">Creaccion Pedido</string>
    <string name="aceitunas">Aceitunas</string>
    <string name="jamonserrano">Jamon Serrano</string>
    <string name="anchoas">Anchoas</string>
    <string name="bacon">Bacon</string>
    <string name="champinhones">Champiñones</string>
    <string name="peperoni">Peperoni</string>
    <string name="selecionado">selecionado</string>
    <string name="deselecionado">deselecionado</string>
    <string name="pedidoseentrega">El pedido se entrega:</string>
    <string name="local">Recoger en local</string>
    <string name="domicilio">Envio a domicilio</string>
    <string name="botonCalcular">Pedir</string>
    <string name="tituloview2">Confirmacion de pedido</string>
    <string name="lista_ingredientes">Lista ingredientes:</string>
    <string name="entrega">Entrega:</string>
    <string name="boton">Aceptar</string>
    <string name="entrega_domicilio">Entrega a domicilio</string>
    <string name="confirmacion_de_pedido">Confirmación de pedido</string>
    <string name="el_pedido_va_a_ser_procesado">El pedido va a ser procesado</string>
    <string name="pedido_confirmado">Pedido confirmado</string>
    <string name="pedido_cancelado">Pedido cancelado</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="autor">Aplicacion realizada por:\nM. Antonio Lorenzo Vizcaino</string>
    <string name="texto_enviar">Pizzeria Kotlin.</string>
    <string name="no_se_puede">No se puede</string>
    <string name="enlace_no_valido">Este no es un enlace válido</string>
    <string name="no_hay_navegador">No tienes ningún navegador para abrir la página web</string>
    <string name="acerca_de">Acerca de</string>
    <string name="inicio">Inicio</string>
    <string name="compartir">Compartir</string>




</resources>